tests/fixtures/invalid/bool_bitor_dict.py
# Cannot bitwise OR Bool and Dict[str, int]
x: bool = True | {"a": 1}
